# thud-c

./: .gitignore  README.md  deps.toml
.github/workflows/: build_linux.yml
src/: .gitignore  CMakeLists.txt
src/examples/: CMakeLists.txt  main.c  multiball.opus
src/examples/data/: multiball.opus  powerup.opus  two.opus
src/include/thud/: synth.h  thud.h
src/lib/: CMakeLists.txt  synth.c  thud.c
